--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ html, body {
   font-size: medium;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 375px) {
  html, body {
    font-size: small;
  }
